[package]
name = "debug-everything"
version = "1.0.0"
authors = ["main() <main@ehvag.de>"]
edition = "2018"
description = "Debug-print everything!"
license = "Unlicense"
documentation = "https://docs.rs/debug-everythinig"
repository = "https://github.com/main--/rust-debug-everything"

[dependencies]
